--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
         <input type="email" id="email" name="email" required><br>
 
         <input type="submit" value="Register">
-        <p class="mesnote">Already have an account <a href="login.html">Sign Up</a></p>     
+        <p class="mesnote">Already have an account <a href="login.php">Sign Up</a></p>     
     </form>
 </body>
 </html>
